# vastrum-monorepo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  hackathon.md  makefile
apps/chatter/frontend/: Cargo.toml  build.rs  entry.js  index.html  package-lock.json  package.json  vite.config.ts
apps/chatter/frontend/src/: lib.rs  tailwind.css  types.rs
apps/concord/deploy/: Cargo.toml
apps/concord/deploy/src/: main.rs
apps/gitter/contract/: Cargo.toml
apps/gitter/contract/src/: lib.rs
apps/gitter/deploy/: Cargo.toml
apps/gitter/deploy/src/: main.rs
apps/gitter/git-relay/: Cargo.toml  readme.md
apps/gitter/git-relay/src/: chain_sync.rs  config.rs  http_server.rs  lib.rs  main.rs  materialize.rs  push_handler.rs  repo_cache.rs  ssh_server.rs
apps/gitter/git-relay/tests/: clone.rs  push.rs
native-client/: Cargo.toml
native-client/src/: main.rs
native-client/src/deployers/: docs_deployer.rs  forum_deployer.rs  mod.rs  static_deployer.rs
native-client/src/interface/: mod.rs  vastrum.rs
node/: Cargo.toml  makefile
node/src/: main.rs
node/src/application/: application.rs  mod.rs  page.rs  sitedata.rs  wasm_component_data.rs
node/src/application/sql/: db.rs  host_communication.rs  mod.rs  query_builder.rs
node/src/application/wasmhost/: config.rs  host.rs  hostbindings.rs  mod.rs
node/src/consensus/: comms.rs  minimmit.rs  mod.rs  types.rs
node/src/db/: blockchain.rs  componentdb.rs  domaindb.rs  mod.rs  pagedb.rs  sitedb.rs
node/src/execution/: execution.rs
node/src/keystore/: keyset.rs  mod.rs
node/src/p2p/: domon.rs  mod.rs  networking.rs  peer_connection.rs
node/src/p2p/types/: getblock.rs  getnotarization.rs  getpeers.rs  messages.rs  mod.rs  payload.rs  transactiongossip.rs
node/src/rpc/: api.rs
node/src/utils/: docs_deployer.rs  forum_deployer.rs  generate_testnet.rs  mod.rs  static_deployer.rs
runtime/native-types/: Cargo.toml
runtime/native-types/src/: kvbtree.rs  kvmap.rs  kvvec.rs  kvvecbtree.rs  lib.rs
runtime/runtime-benchmark/: .gitignore  Cargo.toml
runtime/runtime-benchmark/abi/: Cargo.toml
runtime/runtime-benchmark/contract/: Cargo.toml
runtime/runtime-benchmark/contract/src/: lib.rs
runtime/runtime-benchmark/src/: helpers.rs  main.rs
runtime/runtime-benchmark/src/benchmarks/: counter.rs  kvbtree.rs  kvmap.rs  mod.rs  state_writes.rs
runtime/runtime-lib/: Cargo.toml
runtime/runtime-lib/src/: kvbtree.rs  kvmap.rs  kvvec.rs  kvvecbtree.rs  lib.rs  runtime.rs
runtime/vastrum-abi/: Cargo.toml
runtime/vastrum-abi/src/: lib.rs
shared-types/: Cargo.toml  genesis-dev.json  genesis.json
shared-types/src/: genesis.rs  lib.rs  limits.rs  ports.rs
shared-types/src/borsh/: mod.rs
shared-types/src/compression/: brotli.rs  mod.rs
shared-types/src/crypto/: cha_cha20_poly1305.rs  ed25519.rs  encryption.rs  mod.rs  sha256.rs  site_key.rs  x25519.rs
shared-types/src/frontend/: frontend_data.rs  mod.rs
shared-types/src/iframerpc/: types.rs
shared-types/src/indexer/: mod.rs  types.rs
shared-types/src/proof_verification/: error.rs  mod.rs  verify.rs
shared-types/src/transactioning/: compression.rs  mod.rs  transaction_generator.rs
shared-types/src/types/: consensus.rs  mod.rs  storage.rs
shared-types/src/types/application/: deploy_new_module.rs  deploy_stored_module.rs  domaindata.rs  mod.rs  sitecall.rs  transactiondata.rs
shared-types/src/types/execution/: transaction.rs
shared-types/src/types/rpc/: mod.rs  serde_base64.rs  types.rs
tooling/cli/: Cargo.toml  install.sh
tooling/cli/scaffolds/eth_dapp/: Cargo_toml  README.md
tooling/cli/scaffolds/site/: Cargo_toml  README.md
tooling/cli/src/: main.rs  node.rs  vastrum_git.rs
tooling/cli/src/localnet/: mod.rs  run_localnet.rs
tooling/cli/src/scaffold/: mod.rs  scaffold.rs
tooling/genesis-tool/: Cargo.toml
tooling/genesis-tool/src/: main.rs
tooling/native-lib/: Cargo.toml
tooling/native-lib/src/: error.rs  http_client.rs  lib.rs  test_support.rs  tx_poller.rs
tooling/native-lib/src/deployers/: build.rs  deploy.rs  mod.rs
tooling/rpc-client/: Cargo.toml
tooling/rpc-client/src/: iframe.rs  lib.rs  native.rs
tooling/vastrum-lib-rust-frontend/: Cargo.toml
tooling/vastrum-lib-rust-frontend/src/: handlers.rs  lib.rs  rpc.rs
vastrum-node/: Cargo.toml  build.rs
vastrum-node/src/: lib.rs
vastrum-node/src/block_indexer/: indexer.rs
vastrum-node/src/consensus/: mod.rs  types.rs  validator_state_machine.rs
vastrum-node/src/db/: blockchaindb.rs  db_tests.rs  domain.rs  included_txs.rs  jmt.rs  meta.rs  mod.rs  module.rs  pages.rs  round_state.rs  site.rs  site_kv.rs  vote_state.rs
vastrum-node/src/execution/: application.rs  execution.rs  execution_tests.rs  mod.rs  parallel_batch_verifier.rs  state_tree.rs
vastrum-node/src/keystore/: keyset.rs
vastrum-node/src/p2p/: connection.rs  handshake.rs  handshake_rate_limiter.rs  mod.rs  networking.rs  peer_manager.rs  transport.rs  transport_cipher.rs
vastrum-node/src/rpc/: mod.rs  start.rs
vastrum-node/src/utils/: genesis.rs  limits.rs  logging.rs  mod.rs  rng.rs
vastrum-node/tests/: sim_consensus.rs
vendored-helios/common/: Cargo.toml
vendored-helios/core/: Cargo.toml
vendored-helios/ethereum/: Cargo.toml
vendored-helios/ethereum/consensus-core/: Cargo.toml
vendored-helios/ethereum/src/: builder.rs  consensus.rs  evm.rs
vendored-helios/ethereum/tests/: checkpoints.rs
vendored-helios/helios-tests/: Cargo.toml
vendored-helios/helios-tests/src/: lib.rs
vendored-helios/helios-ts/: Cargo.toml  lib.ts  package-lock.json  package.json  tsconfig.json
vendored-helios/helios-ts/example/: package-lock.json
vendored-helios/helios-ts/src/: ethereum.rs  lib.rs
vendored-helios/linea/: Cargo.toml
vendored-helios/opstack/: Cargo.toml
vendored-helios/revm-utils/: Cargo.toml
web-client/beerus-worker/: Cargo.toml
web-client/beerus-worker/src/: client.rs  worker_entry.rs
web-client/helios-worker/: Cargo.toml
web-client/helios-worker/src/: lib.rs  worker_entry.rs
web-client/wasm/: Cargo.toml
web-client/wasm/src/: lib.rs
(+602 files in other folders)
