[package]
name = "native-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
bytes = "1.10.1"
shared-types = { path = "../shared-types" }
borsh = {version = "1.6.0", features = ["derive"]}
rand = "0.8.5"
