[package]
name = "shared-types"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
bytes = "1.10.1"
ed25519-consensus = "2.1.0"
sha2 = "0.10.9"
borsh = {version = "1.6.0", features = ["derive"]}
hex = "0.4"