[package]
name = "vastrum-shared-types"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-consensus = "2.1.0"
sha2 = "0.10.9"
borsh = {version = "1.6.0", features = ["derive"]}
hex = "0.4"
rand = "0.10"
x25519-dalek = {version = "2.0.1", features=["static_secrets", "serde"]}
curve25519-dalek = "4"
hkdf = "0.12.4"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
wasm-bindgen = "0.2"
tsify = "0.5.6"
base32 = "0.5.1"
base64 = "0.22"
vastrum-webrtc-direct-protocol.workspace = true
vastrum-runtime-shared.workspace = true
lz4_flex = "0.12"
brotli = { version = "8", default-features = false, features = ["std"] }
thiserror = "2"
anyhow = "1"
jmt = { path = "../vendored-jmt-main", default-features = false, features = ["sha2"] }
