[package]
name = "vastrum-genesis-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.6", features = ["ed25519"] }
rand = "0.8"
vastrum-node.workspace = true
vastrum-shared-types.workspace = true
