[package]
name = "vastrum-native-lib"
version = "0.1.0"
edition = "2024"

[features]
localnet = ["vastrum-node"]

[dependencies]
vastrum-shared-types.workspace = true
borsh = {version = "1.6.0", features = ["derive"]}
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
vastrum-node = { workspace = true, optional = true }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
