[package]
name = "vastrum-rpc-client"
version = "0.1.0"
edition = "2024"

[dependencies]
vastrum-shared-types.workspace = true

# Native-only (non-wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vastrum-native-lib.workspace = true
tokio = { version = "1.49.0", features = ["time"] }
rand = { version = "0.10" }

# Wasm32-only
[target.'cfg(target_arch = "wasm32")'.dependencies]
vastrum-frontend-lib.workspace = true
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
