[package]
name = "vastrum-frontend-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10"
futures = "0.3.32"
gloo-timers = { version = "0.3.0", features=["futures"]}
vastrum-shared-types.workspace = true
borsh = {version = "1.6.0", features = ["derive"]}
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "CustomEventInit",
    "CustomEvent",
    "MessageEvent",
    "console",
]
