[package]
name = "helios-common"
version = "1.0.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.37", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"

revm = { version = "29.0.1", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
eyre = "0.6.8"

tokio = { version = "1", features = ["rt", "sync", "macros"] }

thiserror = "1.0.37"
async-trait = "0.1.57"
hex = "0.4.3"

