[package]
name = "helios-ethereum"
version = "1.0.0"
edition = "2021"

[dependencies]
# consensus
alloy-trie = { version = "0.9.1", features = ["ethereum"] }
tree_hash = "0.10.0"
revm = { version = "29.0.1", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
# config
figment = { version = "0.10.7", features = ["toml", "env"] }
serde_yaml = "0.9.14"
strum = { version = "0.26.2", features = ["derive"] }
url = {version = "2.5.0", features = ["serde"] }

# async/futures
tokio = { version = "1", features = ["rt", "sync", "macros"] }

futures = "0.3.23"
async-trait = "0.1.57"

# io
reqwest = { version = "0.12.4", features = ["json", "gzip", "deflate", "zstd", "brotli", "hickory-dns"] }

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"


#misc
alloy = { version = "1.0.37", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
eyre = "0.6.8"

hex = "0.4.3"

tracing = "0.1.37"

chrono = "0.4.23"
thiserror = "1.0.37"
superstruct = "0.7.0"

retri = "0.1.1"

typenum = "1.17.0"


# self crates
helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-consensus-core = { path = "consensus-core" }
helios-revm-utils = { path = "../revm-utils"  }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

dirs = "5.0.1"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }
