[package]
name = "helios-tests"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
futures = "0.3.23"
hex = "0.4.3"
dotenv = "0.15.0"
alloy = { version = "1.0.37", features = ["full"] }
eyre = "0.6.8"
pretty_assertions = "1.4.0"
