[package]
name = "helios-ts"
version = "1.0.0"
edition = "2021"



[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

alloy = { version = "1.0.37", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
eyre = "0.6.8"

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
url = "2.5.0"

# self crates
helios-common = { path = "../common" }
helios-ethereum = { path = "../ethereum" }


[dependencies.web-sys]
version = "0.3"
features = ["console", "Storage", "Window"]




