[package]
name = "helios-opstack"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "opstack-server"
path = "./bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }

eyre = "0.6.8"

tracing = "0.1.37"

hex = "0.4.3"

serde = { version = "1.0.143", features = ["derive"] }

typenum = "1.17.0"

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.12.4", features = ["json", "gzip", "deflate", "zstd", "brotli", "hickory-dns"] }

url = { version = "2.5.2", features = ["serde"] }
futures = "0.3.23"
async-trait = "0.1.57"

# consensus
alloy = { version = "1.0.37", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
alloy-trie = { version = "0.9.1", features = ["ethereum"] }
revm = { version = "29.0.1", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
op-revm = { version = "10.1.0", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
sha2 = "0.9"
ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"
ssz_types = "0.11"
alloy-rlp = "0.3.12"
op-alloy-network = "0.20.0"
op-alloy-consensus = { version = "0.20.0", features = ["k256"] }
op-alloy-rpc-types = "0.20.0"
snap = "1"

# config
figment = { version = "0.10.7", features = ["toml", "env"] }

# self crates
helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
helios-consensus-core = { path = "../ethereum/consensus-core" }
helios-revm-utils = { path = "../revm-utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# server
axum = "0.7.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
# networking
libp2p = { version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping"] }
discv5 = "0.7.0"
libp2p-identity = { version = "0.1.2", features = ["secp256k1"] }
unsigned-varint = "0.7.1"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.1", features = ["js"] }
