[package]
name = "helios-revm-utils"
version = "1.0.0"
edition = "2021"
description = "Utilities for integrating REVM with Helios"

[dependencies]
alloy = { version = "1.0.37", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
eyre = "0.6.8"
 
hex = "0.4.3"
 
revm = { version = "29.0.1", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
tracing = "0.1.37"

thiserror = "1.0.37"

# self crates
helios-common = { path = "../common" }
helios-core = { path = "../core" }