[package]
name = "vastrum-beerus-worker-wasm"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
beerus = { git = "https://github.com/vastrum/Beeruser", default-features = false }
iamgroot = { git = "https://github.com/vastrum/Beeruser" }
vastrum-shared-types.workspace = true
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Crypto",
    "XmlHttpRequest",
]
