[package]
name = "chatter-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
yew = { version = "0.22.1", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3.0", features=["futures"]}
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
vastrum-shared-types = { version = "0.1.0", path = "../../../shared-types" }
vastrum-frontend-lib = { version = "0.1.0", path = "../../../tooling/vastrum-lib-rust-frontend" }
vastrum-abi = { version = "0.1.0", path = "../../../runtime/vastrum-abi" }
chatter-abi = { path = "../abi" }
bs58 = "0.5"
borsh = { version = "1.6", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
]

