[package]
name = "concord-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
vastrum-abi = { version = "0.1.0", path = "../../../runtime/vastrum-abi" }
concord-abi = { path = "../abi" }
vastrum-native-lib = { version = "0.1.0", path = "../../../tooling/native-lib" }
vastrum-shared-types = { version = "0.1.0", path = "../../../shared-types" }
vastrum-runtime-shared = { version = "0.1.0", path = "../../../runtime/runtime-shared" }
borsh = { version = "1.6.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full", "tracing"] }
