[package]
name = "gitter-contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { version = "1", default-features = false, features = ["derive"] }
vastrum-contract-macros = { version = "0.1.0", path = "../../../runtime/contract-macros" }
vastrum-runtime-lib = { version = "0.1.0", path = "../../../runtime/runtime-lib" }
sha1 = { version = "0.10", default-features = false }
