[package]
name = "gitter-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
vastrum-abi = { version = "0.1.0", path = "../../../runtime/vastrum-abi" }
vastrum-native-lib = { version = "0.1.0", path = "../../../tooling/native-lib" }
vastrum-rpc-client = { version = "0.1.0", path = "../../../tooling/rpc-client" }
vastrum-shared-types = { version = "0.1.0", path = "../../../shared-types" }
vastrum-git-lib = { path = "../vastrum-git-lib" }
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tempfile = "3"
gix = { version = "0.80.0", default-features = false, features = ["parallel", "worktree-mutation", "index", "serde"] }
